fixed stats table

--- a/src/XFood.Web/Pages/Stats/IndexPage.razor
+++ b/src/XFood.Web/Pages/Stats/IndexPage.razor
@@ -4,47 +4,57 @@
 @inject IStatsService StatsService
 
 <PageTitle>Общая статистика</PageTitle>
+<h3>График контроллинга</h3>
 
-<h1>Все проверки</h1>
+<table class="table hovered text-center">
+    <thead>
+        <tr>
+            <th>КЛН Менеджера</th>
+            <th>Пиццерия</th>
+            <th>Дата начала проверки</th>
+            <th>Дата завершения проверки</th>
+            <th>Количество баллов</th>
+        </tr>
+    </thead>
+    <tbody>
 
-@if (chekLists != null && chekLists.List != null && chekLists.List.Any())
-{
-    <h3>График контроллинга</h3>
+        @if (checkLists != null && checkLists.List != null && checkLists.List.Any())
+        {
+            var groupedCheckLists = checkLists.List.GroupBy(c => c.Pizzeria.Name);
 
-    <table class="table hovered text-center">
-        <thead>
-            <tr>
-                <th>КЛН Менеджера</th>
-                <th>Пиццерия</th>
-                <th>Дата начала проверки</th>
-                <th>Дата завершения проверки</th>
-                <th>Количество баллов</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var checkList in chekLists.List)
+            @foreach (var group in groupedCheckLists)
             {
                 <tr>
-                    <td>@checkList.Manager?.FirstName @checkList.Manager?.LastName</td>
-                    <td>@checkList.Pizzeria?.Name</td>
-                    <td>@checkList?.StartCheck</td>
-                    <td>@checkList?.EndCheck</td>
-                    <td>@checkList?.TotalPoints</td>
+                    <td colspan="5"><b>@group.Key</b></td>
+                </tr>
+                @foreach (var checkList in group)
+                {
+                    <tr>
+                        <td>@checkList.Manager?.FirstName @checkList.Manager?.LastName</td>
+                        <td>@checkList.Pizzeria?.Name</td>
+                        <td>@checkList?.StartCheck</td>
+                        <td>@checkList?.EndCheck</td>
+                        <td>@checkList?.TotalPoints</td>
+                    </tr>
+                }
+                <tr>
+                    <td colspan="4" style="text-align: right;"><b>Средний балл</b></td>
+                    <td>@group.Average(c => c.TotalPoints)</td>
                 </tr>
             }
-        </tbody>
-    </table>
-}
-else
-{
-    <span>Нету данных</span>
-}
+        }
+        else
+        {
+            <span>Нету данных</span>
+        }
+    </tbody>
+</table>
 
 @code {
-    GetListStatsResponse chekLists;
+    GetListStatsResponse checkLists;
 
     protected override async Task OnInitializedAsync()
     {
-        chekLists = await StatsService.GetListStats(new GetListStatsRequest());
+        checkLists = await StatsService.GetListStats(new GetListStatsRequest());
     }
 }
