--- a/src/XFood.Web/Pages/Check-List/CheckWork.razor
+++ b/src/XFood.Web/Pages/Check-List/CheckWork.razor
@@ -61,12 +61,10 @@
                     @if (criterion.Criterion.Section == "Критический фактор")
                     {
                         <tr>
-                        <td>
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">@criterion.Criterion.Name</a>
-                        </td>
+                        <td><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2"  @onclick="() => OpenModal2(criterion.Criterion.Id, response.CheckList.Id)">@criterion.Criterion.Name</a></td>
                         <td>@criterion.Criterion.MaxPoints</td>
                         <td>
-                            <input type="number" class="form-control text-danger" @bind="criterion.ReceivedPoints" min="0" max="@criterion.Criterion.MaxPoints" />
+                            <p class="form-control text-warning">@getTotalCriticalFactor2</p>
                         </td>
                         </tr>
                     }
@@ -113,7 +111,7 @@ else
       <div class="modal-body">
           @if (getListCriticalFactorResponse != null && getListCriticalFactorResponse.List != null && getListCriticalFactorResponse.List.Any())
         {
-            var groupedCriterions = getListCriticalFactorResponse.List.Where(c => c.CheckListId == selectedcheckListId1).GroupBy(c => c.CriterionId);
+            var groupedCriterions = getListCriticalFactorResponse.List.Where(c => c.CheckListId == selectedcheckListId1 && c.CriterionId == selectedCriterionId1).GroupBy(c => c.CriterionId);
             foreach (var group in groupedCriterions)
             {      
             <ul class="list-group">
@@ -185,7 +183,54 @@ else
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        ...
+        @if (getListCriticalFactorResponse != null && getListCriticalFactorResponse.List != null && getListCriticalFactorResponse.List.Any())
+        {
+            var groupedCriterions = getListCriticalFactorResponse.List.Where(c => c.CheckListId == selectedcheckListId2 && c.CriterionId == selectedCriterionId2).GroupBy(c => c.CriterionId);
+            foreach (var group in groupedCriterions)
+            {      
+            <ul class="list-group">
+                    @foreach (var c in group)
+                    {   <li class="list-group-item d-flex justify-content-between align-items-center">
+                                @if (c != criticalFactorView)
+                                {
+                                    @c.Description
+                                }
+                                else
+                                {
+                                    
+                                    <input @bind="criticalFactorView.Description" class="form-control">
+                                }
+                        @if (c != criticalFactorView)
+                        {
+                            <button class="btn btn-sm btn-primary" @onclick="@(async () => await EditCriticalFactor(c))">
+                                <span class="oi oi-pencil" aria-hidden="true"></span>
+                            </button>
+                        }
+                        else
+                        {
+                            <button class="btn btn-sm btn-success" @onclick="SaveEditedCriticalFactor2">
+                                <span class="oi oi-check" aria-hidden="true"></span>
+                            </button>
+                        }
+                        <button class="btn btn-sm btn-danger" @onclick="@(async () => await DeleteCriticalFactor(c))">
+                            <span class="oi oi-trash" aria-hidden="true"></span>
+                        </button>
+                        </li>
+                    }
+            </ul>
+            }
+        }
+        else
+        {
+                <tr>
+                    <td colspan="2">Нету данных</td>
+                </tr>
+                
+        }
+       <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Введите критический фактор" @bind="@CriticalFactor"  aria-describedby="button-addon2">
+            <button class="btn btn-success" type="button" @onclick="SaveModal2" id="button-addon2">Добавить</button>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -215,21 +260,31 @@ else
     double TotalPoints;
     double PointProz;
     int getTotalCriticalFactor;
+    int getTotalCriticalFactor2;
     private bool _error1 = false;
     private string CriticalFactor { get; set; }
 
     private int selectedCriterionId1;
     private int selectedcheckListId1;
+    private int selectedCriterionId2;
+    private int selectedcheckListId2;
 
     private async Task RefreshCriticalFactorsList()
     {
         getListCriticalFactorResponse = await CriticalFactorService.GetCriticalFactors(new GetListCriticalFactorRequest());
         GetTotalMaxPoint();
+        GetTotalMaxPoint2();
     }
     private async Task OpenModal1(int criterionId, int checkListId)
     {
         selectedCriterionId1 = criterionId;
         selectedcheckListId1 = checkListId;
+        await RefreshCriticalFactorsList();
+    }
+    private async Task OpenModal2(int criterionId, int checkListId)
+    {
+        selectedCriterionId2 = criterionId;
+        selectedcheckListId2 = checkListId;
         await RefreshCriticalFactorsList();
     }
     private async Task SaveModal1()
@@ -250,6 +305,16 @@ else
             await RefreshCriticalFactorsList();
         }
     }
+    private async Task SaveModal2()
+    {
+        createCriticalFactorRequest.CriterionId = selectedCriterionId2;
+        createCriticalFactorRequest.Description = CriticalFactor;
+        createCriticalFactorRequest.MaxPoints = -8;
+        createCriticalFactorRequest.CheckListId = selectedcheckListId2;
+        createCriticalFactorResponse = await CriticalFactorService.Create(createCriticalFactorRequest);
+        await RefreshCriticalFactorsList();
+        
+    }
 
     private async Task SaveScore()
     {
@@ -259,6 +324,10 @@ else
             if (criterion.Criterion.Section == "Критический фактор" && criterion.Criterion.Id == selectedCriterionId1)
             {
                 setPointsRequest.ReceivedPoints = getTotalCriticalFactor;
+            }
+            else if (criterion.Criterion.Section == "Критический фактор" && criterion.Criterion.Id == selectedCriterionId2)
+            {
+                setPointsRequest.ReceivedPoints = getTotalCriticalFactor2;
             }
             else
             {
@@ -308,6 +377,16 @@ else
         criticalFactorView = null;
 
     }
+    private async Task SaveEditedCriticalFactor2()
+    {
+        updateCriticalFactorRequest.Id = criticalFactorView.Id;
+        updateCriticalFactorRequest.Description = criticalFactorView.Description;
+        updateCriticalFactorRequest.MaxPoints = -8;
+        updateCriticalFactorResponse = await CriticalFactorService.Update(updateCriticalFactorRequest);
+        await RefreshCriticalFactorsList();
+        criticalFactorView = null;
+
+    }
 
     private async Task DeleteCriticalFactor(CriticalFactorView criticalFactor)
     {
@@ -318,7 +397,7 @@ else
 
     private  async Task GetTotalMaxPoint()
     {
-        var groupedCriterions = getListCriticalFactorResponse.List.Where(c => c.CheckListId == selectedcheckListId1).GroupBy(c => c.CriterionId);
+        var groupedCriterions = getListCriticalFactorResponse.List.Where(c => c.CheckListId == selectedcheckListId1 && c.CriterionId == selectedCriterionId1).GroupBy(c => c.CriterionId);
         int totalMaxPoints = 0;
         foreach (var group in groupedCriterions)
         {
@@ -328,5 +407,18 @@ else
             }
         }
         getTotalCriticalFactor = totalMaxPoints;
+    }
+    private  async Task GetTotalMaxPoint2()
+    {
+        var groupedCriterions = getListCriticalFactorResponse.List.Where(c => c.CheckListId == selectedcheckListId2 && c.CriterionId == selectedCriterionId2).GroupBy(c => c.CriterionId);
+        int totalMaxPoints = 0;
+        foreach (var group in groupedCriterions)
+        {
+            foreach (var c in group)
+            {
+                totalMaxPoints += c.MaxPoints;
+            }
+        }
+        getTotalCriticalFactor2 = totalMaxPoints;
     }
 }
