--- a/src/XFood.Web/Pages/Check-List/CheckWork.razor
+++ b/src/XFood.Web/Pages/Check-List/CheckWork.razor
@@ -117,7 +117,8 @@ else
             <ul class="list-group">
                     @foreach (var c in group)
                     {   <li class="list-group-item d-flex justify-content-between align-items-center">
-                                @if (c != criticalFactorView)
+                        <div>
+                            @if (c != criticalFactorView)
                                 {
                                     @c.Description
                                 }
@@ -126,21 +127,25 @@ else
                                     
                                     <input @bind="criticalFactorView.Description" class="form-control">
                                 }
-                        @if (c != criticalFactorView)
-                        {
-                            <button class="btn btn-sm btn-primary" @onclick="@(async () => await EditCriticalFactor(c))">
-                                <span class="oi oi-pencil" aria-hidden="true"></span>
+                        </div>
+                         <div>
+                            @if (c != criticalFactorView)
+                            {
+                                <button class="btn btn-sm btn-primary" @onclick="@(async () => await EditCriticalFactor(c))">
+                                    <span class="oi oi-pencil" aria-hidden="true"></span>
+                                </button>
+                            }
+                            else
+                            {
+                                <button class="btn btn-sm btn-success" @onclick="SaveEditedCriticalFactor">
+                                    <span class="oi oi-check" aria-hidden="true"></span>
+                                </button>
+                            }
+                            <button class="btn btn-sm btn-danger ms-3" @onclick="@(async () => await DeleteCriticalFactor(c))">
+                                <span class="oi oi-trash" aria-hidden="true"></span>
                             </button>
-                        }
-                        else
-                        {
-                            <button class="btn btn-sm btn-success" @onclick="SaveEditedCriticalFactor">
-                                <span class="oi oi-check" aria-hidden="true"></span>
-                            </button>
-                        }
-                        <button class="btn btn-sm btn-danger" @onclick="@(async () => await DeleteCriticalFactor(c))">
-                            <span class="oi oi-trash" aria-hidden="true"></span>
-                        </button>
+                         </div>
+                                
                         </li>
                     }
             </ul>
@@ -153,7 +158,7 @@ else
                 </tr>
                 
         }
-       <div class="input-group mb-3">
+       <div class="input-group mb-3 mt-4">
         @if (getTotalCriticalFactor == -12)
         {
             <div class="alert alert-danger" role="alert">
@@ -191,7 +196,7 @@ else
             <ul class="list-group">
                     @foreach (var c in group)
                     {   <li class="list-group-item d-flex justify-content-between align-items-center">
-                                @if (c != criticalFactorView)
+                        <div>@if (c != criticalFactorView)
                                 {
                                     @c.Description
                                 }
@@ -199,8 +204,8 @@ else
                                 {
                                     
                                     <input @bind="criticalFactorView.Description" class="form-control">
-                                }
-                        @if (c != criticalFactorView)
+                                }</div>
+                        <div>@if (c != criticalFactorView)
                         {
                             <button class="btn btn-sm btn-primary" @onclick="@(async () => await EditCriticalFactor(c))">
                                 <span class="oi oi-pencil" aria-hidden="true"></span>
@@ -212,9 +217,11 @@ else
                                 <span class="oi oi-check" aria-hidden="true"></span>
                             </button>
                         }
-                        <button class="btn btn-sm btn-danger" @onclick="@(async () => await DeleteCriticalFactor(c))">
+                        <button class="btn btn-sm btn-danger ms-3" @onclick="@(async () => await DeleteCriticalFactor(c))">
                             <span class="oi oi-trash" aria-hidden="true"></span>
-                        </button>
+                        </button></div>
+
+                        
                         </li>
                     }
             </ul>
@@ -227,7 +234,7 @@ else
                 </tr>
                 
         }
-       <div class="input-group mb-3">
+       <div class="input-group mb-3 mt-4">
             <input type="text" class="form-control" placeholder="Введите критический фактор" @bind="@CriticalFactor"  aria-describedby="button-addon2">
             <button class="btn btn-success" type="button" @onclick="SaveModal2" id="button-addon2">Добавить</button>
         </div>
@@ -302,6 +309,7 @@ else
             createCriticalFactorRequest.MaxPoints = -4;
             createCriticalFactorRequest.CheckListId = selectedcheckListId1;
             createCriticalFactorResponse = await CriticalFactorService.Create(createCriticalFactorRequest);
+            CriticalFactor = "";
             await RefreshCriticalFactorsList();
         }
     }
@@ -312,6 +320,7 @@ else
         createCriticalFactorRequest.MaxPoints = -8;
         createCriticalFactorRequest.CheckListId = selectedcheckListId2;
         createCriticalFactorResponse = await CriticalFactorService.Create(createCriticalFactorRequest);
+        CriticalFactor = "";
         await RefreshCriticalFactorsList();
         
     }
