--- a/src/XFood.Web/Shared/NavMenu.razor
+++ b/src/XFood.Web/Shared/NavMenu.razor
@@ -31,6 +31,11 @@
                     <span class="oi oi-bar-chart" aria-hidden="true"></span> Общая статистика
                 </NavLink>
             </AuthorizeView>
+            <AuthorizeView Roles="admin">
+                <NavLink class="nav-link" href="appeals">
+                    <span class="oi oi-bullhorn" aria-hidden="true"></span> Аппеляции
+                </NavLink>
+            </AuthorizeView>
         </div>
     </nav>
 </div>
@@ -44,5 +49,4 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
-
 }
